styles.css
/* ... */
@media(max-width:500px) {
    .home{
        flex-direction: column;
        padding-top: 80px;
    }
    .homeText{
        width: 100%;
        text-align: center;
    }
    .homeText h1{
        font-size: 35px;
    }
    .navList{
        display: none;
    }
    .based-{
        display: none;
    }
    .toggle_btn{
        display: block;
    }
    .dropdown_menu{
        display: block;
    }
    .links{
        justify-content: center;
    }
    .homeImage{
        display: none;
    }
    .navItems span{
        font-size: .9rem;
    }
    .seek{
        font-size: 18px;
        background-color: #222222;
        display: flex;
        justify-content: center;
        height: 30px;
        width: 30px;
    }
    .based a{
        padding: 0px 4px;
        font-size: 13px;
    }
    .based a i{
        font-size: .6rem;
    }
    .based- a{
        font-size: .7rem;
     }
     .navList ul li a{
        font-size: 12px;
    }
    .navList ul li a:hover{
        font-size: .9rem;
    }
    
}

#work{
    border-bottom: 1px solid;
}

.projects{
    margin-block: 3rem;
    font-family: "Manrope", serif;
}
.app,.app0,.app1,.app2,.app3,.app4,.app5,.app6,.app7,.app8,.app9,.app10,.app11, .app12, .app13 {
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 4s ease, transform 0.6s ease;
}
.show {
    opacity: 1;
    transform: translateY(0);
}

.feature{
    width: 36%;
}

.feature h1{
    font-family: "Bebas Neue", serif;
    font-weight: 400;
    font-size: 3rem;
}

.feature p{
    font-size: .8rem;
    font-family: "Manrope", serif;
}

.work{
    display: flex;
    gap: 3rem;
    margin-block: 3rem;
    align-items: center;
    margin-bottom: 5rem;
    justify-content: space-between;
}

.workImg{
    background-color: #222222;
    border-radius: 10px;
}

.workImg img{
    padding: 50px 50px;
    width: 100%;
    height: 20rem;
    border-radius: 10px;
}

.workText{
    width: 45%;
    
}

.workText h1{
    padding-bottom: 1rem;
    font-weight: 600;
}

.workText>p{
    width: 100%;
    font-weight: 300;
}

.one{
    padding-block: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid;
    text-transform: capitalize;
}

.one h2, .one h3{
    font-weight: 500;
}

.link{
    margin-top: 1rem;
    display: flex;
    align-items: center;
    gap: 2rem;
}

.link a{
    color: #7aa7e9;
    text-transform: uppercase;
    font-size: .9rem;
    font-weight: 500;
    display: flex;
    align-items: center;
    gap: .3rem;
    padding-bottom: .3rem;
    border-bottom: 2px solid;
}

.link a i{
    font-size: 1.3rem;
}

@media(max-width:1024px) {

    .projects{
        padding: 10px 30px;
    }
    .workText h1{
        font-size: 21px;
    }
    
    .workText>p{
        font-size: 15px;
    }
    .one h2{
        font-size: 18px;
    }
    .one h3{
        font-size: 17px;
    }
    .one p{
        font-size: 15px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }

}
@media(max-width:800px) {
    .feature{
        width: 50%;
    }
    .feature h1{
        font-size: 2rem;
    }
    
    .feature p{
        font-size: .7rem;
    }
    .workText h1{
        font-size: 19px;
    }
    
    .workText>p{
        font-size: 13px;
    }
    .one h2{
        font-size: 15px;
    }
    .one h3{
        font-size: 14px;
    }
    .one p{
        font-size: 14px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }
    .workImg{
        background-color: #222222;
        border-radius: 10px;
        display: flex;
        justify-content: center;
    }
    
    .workImg img{
        padding: 40px 0px;
        width: 90%;
        height: 18rem;
        border-radius: 10px;
    }

}
@media(max-width:500px) {
    .feature{
        width: 100%;
        text-align: center;
    }
    .feature h1{
        font-size: 2rem;
    }
    .feature p{
        font-size: .7rem;
    }
    .work{
        flex-direction: column;
    }
    .workText{
        width: 100%;
    }
    .workText h1{
        font-size: 19px;
    }
    
    .workText>p{
        font-size: 13px;
    }
    .one h2{
        font-size: 15px;
    }
    .one h3{
        font-size: 14px;
    }
    .one p{
        font-size: 14px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }
    .workImg{
        background-color: #222222;
        border-radius: 10px;
        display: flex;
        justify-content: center;
    }
    
    .workImg img{
        padding: 0px 0px;
        width: 100%;
        height: 13rem;
        border-radius: 10px;
    }

}

#about{
    border-bottom: 1px solid;
}

.about{
    display: flex;
    align-items: start;
    margin-top: 4rem;
    margin-bottom: 4rem;
    justify-content: space-between;
}

.about>h1{
    font-family: "Bebas Neue", serif;
    font-weight: 500;
    width: 40%;
    font-size: 5rem;
}

.story{
    font-family: "Manrope", serif;
    width: 50%;
    padding-top: 1rem;
}

.story h2{
    font-weight: 400;
}

.story p{
    margin-block: 2rem;
}

.story a{
    color: #7aa7e9;
    text-transform: uppercase;
    font-size: .9rem;
    font-weight: 500;
    padding-bottom: .1rem;
    border-bottom: 2px solid;
}

.aboutImg{
    display: none;
}

@media (max-width:1024px) {
    .about{
        padding: 10px 30px;
    }
    .about>h1{
        font-size: 60px;
    }
    .story h2{
        font-size: 24px;
    }
    .story p{
        font-size: 16px;
    }
    .story a{
        font-size: 14px;
    }
}
@media (max-width:800px) {
    .about>h1{
        font-size: 50px;
    }
    .story h2{
        font-size: 22px;
    }
    .story p{
        font-size: 15px;
    }
    .story a{
        font-size: 13px;
    }
}
/* ... */

